--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -48,3 +48,23 @@ dniNoOK=DNI not Ok
 dniOK=DNI Ok
 
 bntSave=Save
+bntCancel=Cancel
+
+
+#### ViewEmployee
+lblItianlMessageSelect=Selecct a person
+iconFiles=Files
+iconSalary=History
+btnFiredUp=Take Donw
+btnPromote=Promote
+deleteConfirm=Are you sure to delete the employee?
+titleDetail=Detail
+deleteOk=Delete Success
+deleteNotOk=Delete Error
+
+### dialog
+btnOK=Acept
+btnCancel=Cancel
+newPromote=Promote
+SaveOK=Save Ok
+NotSave=Not Save
